# rediit-core-game

./: Cargo.toml  README.md
client/: .env  index.html  package-lock.json  package.json  tailwind.config.ts
client/src/: App.tsx  vite-env.d.ts
client/src/components/: GameOver.tsx  HUD.tsx  ItemShopModal.tsx  LeaderboardPanel.tsx  Minimap.tsx  PauseMenu.tsx  PipeTransition.tsx  TokenMintModal.tsx  TxToast.tsx  WalletButton.tsx
client/src/engine/: AudioManager.ts  Camera.ts  CollisionSystem.ts  EntityManager.ts  GameLoop.ts  InputManager.ts  LevelMap.ts  MarioSprites.ts  Physics.ts  Renderer.ts  ScrollCamera.ts  SpriteSheet.ts
client/src/lib/: axumClient.ts  contractClient.ts  stellarClient.ts
client/src/pages/: Game.tsx  Landing.tsx
client/src/stores/: gameStore.ts  playerStore.ts  walletStore.ts
client/src/styles/: globals.css
contracts/core_game/: Cargo.toml
contracts/core_game/src/: lib.rs  test.rs
server/: Cargo.toml
server/src/: main.rs
